User Login to be finished

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -65,6 +65,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BasicModel\BasicModel.csproj">
+      <Project>{562d7517-3adb-4b6a-8b9b-df344ff56478}</Project>
+      <Name>BasicModel</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
