--- a/EasyCMS/Web.config
+++ b/EasyCMS/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="EasyCMSSql" connectionString="Server=.;Database=EasyCMS;User ID=sa;Password=admin147159;Trusted_Connection=False;Encrypt=false;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
 
