--- a/EasyCMS/Web.config
+++ b/EasyCMS/Web.config
@@ -11,7 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="EasyCMSSql" connectionString="Server=.;Database=EasyCMS;User ID=sa;Password=admin147159;Trusted_Connection=False;Encrypt=false;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+    <!--<add name="EasyCMSSql" connectionString="Server=.;Database=EasyCMS;User ID=sa;Password=admin147159;Trusted_Connection=False;Encrypt=false;Connection Timeout=30;" providerName="System.Data.SqlClient"/>-->
+    <add name="EasyCMSSql" connectionString="Server=192.168.30.100;Database=EasyCMS;User ID=sa;Password=123;Trusted_Connection=False;Encrypt=false;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
