--- a/EasyCMS/UI.csproj
+++ b/EasyCMS/UI.csproj
@@ -154,6 +154,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\VmUserLogin.cs" />
+    <Compile Include="ViewModels\VmUserSession.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
